--- a/drupal/sites/all/themes/eenterprise/sass/styles.scss
+++ b/drupal/sites/all/themes/eenterprise/sass/styles.scss
@@ -429,10 +429,16 @@ footer {
         display: table-cell;
       }
     }
+    .paging_simple {
+        .pager-current {
+            font-size: 1.4rem;
+        }
+    }
 }
 .grid-stack-item {
     .pager {
         margin: 0 auto;
+        font-size: 1.4rem;
         a {
             font-family: $font-sans !important;
             font-size: 1.4rem;
